--- a/LiveAndEnvironment/LiveAndEnvironment.csproj
+++ b/LiveAndEnvironment/LiveAndEnvironment.csproj
@@ -41,14 +41,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adaptation.cs" />
+    <Compile Include="Behavior\BehaviorPattern.cs" />
+    <Compile Include="Behavior\Condition.cs" />
+    <Compile Include="Behavior\ComprassionSigns.cs" />
     <Compile Include="Cell.cs" />
     <Compile Include="Environment.cs" />
+    <Compile Include="Behavior\EnvironmentCondition.cs" />
     <Compile Include="EnvironmentType.cs" />
     <Compile Include="GameEngine.cs" />
+    <Compile Include="Behavior\MassCondition.cs" />
+    <Compile Include="Behavior\RandomCondition.cs" />
     <Compile Include="Species.cs" />
     <Compile Include="Unit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnitState.cs" />
+    <Compile Include="Behavior\UnitState.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
