--- a/LiveAndEnvironment/LiveAndEnvironment.csproj
+++ b/LiveAndEnvironment/LiveAndEnvironment.csproj
@@ -40,7 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Adaptation.cs" />
+    <Compile Include="Species\FoodType.cs" />
+    <Compile Include="Species\Adaptation.cs" />
     <Compile Include="Behavior\BehaviorPattern.cs" />
     <Compile Include="Behavior\Condition.cs" />
     <Compile Include="Behavior\ComprassionSigns.cs" />
@@ -51,8 +52,8 @@
     <Compile Include="GameEngine.cs" />
     <Compile Include="Behavior\MassCondition.cs" />
     <Compile Include="Behavior\RandomCondition.cs" />
-    <Compile Include="Species.cs" />
-    <Compile Include="Unit.cs" />
+    <Compile Include="Species\Species.cs" />
+    <Compile Include="Species\Unit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Behavior\UnitState.cs" />
   </ItemGroup>
